# LLM_Agent_Orchestration_HW7

./: .claude  .coveragerc  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Assignment_7_Cover_Page.html  BUILD_AND_RELEASE_GUIDE.md  CONTRIBUTING.md  HOW_QUALITY_WORKS.md  INSTALL.md  LICENSE  Missions_EvenOddLeague.md  PACKAGING_GUIDE.md  PRD_EvenOddLeague.md  PROGRESS_TRACKER.md  PROJECT_GUIDE.md  QUALITY_STANDARDS_ANALYSIS.md  QUICK_START_NOTEBOOK.md  README.md  STYLE_GUIDE.md  grader_agent.md  kickoff_agent_core_v3.1.md  kickoff_templates_v3.1.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  start_all_agents.sh  test_auth_token.py  test_response_auth.py  verify_installation.py
.github/workflows/: test.yml
SHARED/config/: system.json
SHARED/config/agents/: agents_config.json
SHARED/config/defaults/: player.json  referee.json
SHARED/config/games/: games_registry.json
SHARED/config/leagues/: league_2025_even_odd.json
SHARED/league_sdk/: README.md  __init__.py  cleanup.py  config_loader.py  config_models.py  logger.py  method_aliases.py  protocol.py  pyproject.toml  queue_processor.py  repositories.py  retry.py  setup.py  utils.py
SHARED/scripts/: cleanup_data.py
agents/: THREAD_SAFETY_TEMPLATE.md  __init__.py
agents/base/: __init__.py  agent_base.py
agents/league_manager/: __init__.py  main.py  server.py  server.py.bak
agents/player_P01/: __init__.py  handlers.py  main.py  server.py
agents/player_P02/: __init__.py  main.py
agents/player_P03/: __init__.py  main.py
agents/player_P04/: __init__.py  main.py
agents/referee_REF01/: __init__.py  game_logic.py  main.py  match_conductor.py  server.py  timeout_enforcement.py
agents/referee_REF02/: README.md  VERIFICATION.md  __init__.py  main.py
doc/: M6.1_M6.2_IMPLEMENTATION_PLAN_v2.md  README.md  architecture.md  configuration.md  data_retention_policy.md  deployment_guide.md  developer_guide.md  error_codes_reference.md  error_handling_strategy.md  evidence_matrix.md  risk_register.md  system_integration_verification_plan.md  testing_guide.md  usability_analysis.md  usability_extensibility.md
doc/algorithms/: round_robin.md
doc/architecture/: thread_safety.md
doc/architecture/adr/: 0001-use-fastapi-jsonrpc.md  0002-async-httpx-client.md  0003-file-based-storage.md  0004-structured-jsonl-logging.md  0005-retry-and-circuit-breaker.md  0006-method-alias-layer.md  0007-cleanup-scheduler.md  0008-separate-referee-agents.md  0009-shared-sdk-structure.md  0010-round-robin-scheduling.md  0011-timeout-enforcement-referee.md  0012-iso-8601-utc-timestamps.md  README.md
doc/game_rules/: even_odd.md
doc/guides/: HOW_QUALITY_WORKS.md  queue_processor_guide.md
doc/plans/: M6.1_M6.2_IMPLEMENTATION_PLAN_v2.md
doc/prompt_log/: comprehensive_verification_prompt.md  config_layer_mission_3.0-3.3_prompt.md  league_manager_missions_7.9-7.12_prompt.md  mission_2_implementation_prompt.md  mission_4_0_4_1_implementation_prompt.md  mission_7.13_and_7.13.5_deep_analysis_prompt.md  missions_M6.1_M6.2_cli_and_operational_scripts_prompt.md  testing_infrastructure_mission_4.0-4.1_prompt.md
doc/reference/: api_reference.md  data_retention_policy.md  error_handling_strategy.md
doc/research_notes/: README.md  experiments.html  experiments.ipynb  mcp_protocol.md
scripts/: analyze_logs.sh  backup_data.sh  build_release_packages.sh  check_health.sh  check_registration_status.sh  cleanup_old_data.sh  query_standings.sh  restore_data.sh  start_league.sh  stop_league.sh  trigger_league_start.sh  verify_configs.sh  view_match_state.sh
tests/: __init__.py  conftest.py
tests/e2e/: test_4_player_league.py  test_graceful_shutdown.py  test_network_failure_recovery.py  test_standings_accuracy.py
tests/edge_cases/: test_edge_cases.py
tests/integration/: test_cleanup_scheduler.py  test_concurrent_matches.py  test_league_orchestration.py  test_match_flow.py  test_match_result_reporting.py  test_pdf_compatibility.py  test_player_registration.py  test_referee_integration.py  test_standings_update.py  test_start_league_tool.py  test_timeout_enforcement.py
tests/protocol_compliance/: __init__.py  test_auth_token_presence.py  test_envelope_fields.py  test_message_types.py  test_sender_format.py  test_timestamp_format.py
tests/unit/test_agents/: test_agent_base.py  test_base_agent.py  test_player_server.py
tests/unit/test_league_manager/: __init__.py  test_advanced_logic.py  test_data_retention_init.py  test_helpers.py  test_orchestration.py  test_queries.py  test_registration.py  test_scheduler.py  test_standings.py
tests/unit/test_referee_agent/: test_game_logic.py  test_match_conductor.py  test_message_routing.py  test_referee_ref02.py  test_referee_server.py  test_timeout_enforcement.py
tests/unit/test_sdk/: test_cleanup.py  test_config_loader.py  test_config_models.py  test_default_configs.py  test_games_registry.py  test_logger.py  test_method_aliases.py  test_protocol_models.py  test_queue_processor.py  test_repositories.py  test_retry.py  test_utils.py
