[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "even-odd-league"
version = "1.0.0"
description = "Multi-agent Even/Odd game league system using MCP"
requires-python = ">=3.10"
dependencies = [
    # Core Framework
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    # HTTP Client
    "requests>=2.28.0",
    "httpx>=0.28.0",
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    # Code Quality
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pydocstyle>=6.3.0",
    "radon>=6.0.0",
    "pylint>=2.17.0",
    "black>=23.0.0",
    "isort==5.13.2",
    "pre-commit>=3.5.0",
    # Type Stubs
    "types-requests>=2.28.0",
    # Utilities
    "python-dateutil>=2.8.0",
    # Data Science & Research (for M5.5 experiments notebook)
    "jupyter>=1.1.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.13.0",
    "ipykernel>=7.0.0",
    "nbconvert>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
research = [
    "jupyter>=1.1.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.13.0",
]

[tool.black]
line-length = 104
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
^/venv/
^/.venv/
^/env/
^/dist/
^/build/
^/__pycache__/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 104
skip = ["venv", ".venv", "env", "dist", "build", "__pycache__"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = true
strict = false
ignore_missing_imports = true
exclude = ["venv", ".venv", "env", "dist", "build", "__pycache__", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore errors in specific modules where fixes would require code changes
[[tool.mypy.overrides]]
module = [
    "SHARED.league_sdk.logger",
    "SHARED.league_sdk.protocol",
    "SHARED.league_sdk.retry",
    "SHARED.league_sdk.config_loader"
]
ignore_errors = true


[tool.pylint.messages_control]
disable = [
    "C0111",  # Missing docstring (enforced via pydocstyle)
    "R0903",  # Too few public methods (common for data classes)
    "R0913",  # Too many arguments
    "R0917",  # Too many positional arguments
    "W1514",  # Using open without explicit encoding
    "C0411",  # Wrong import order
    "W0611",  # Unused import
    "W0612",  # Unused variable
    "W0201",  # Attribute defined outside __init__
    "C0415",  # Import outside toplevel
    "W0707",  # Raise missing from
    "R1710",  # Inconsistent return statements
    "C0325",  # Unnecessary parens
    "R0801",  # Duplicate code
    "E0401",  # Import error (e.g. setuptools in venv)
    "C0103",  # Invalid-name for module (due to agent naming convention)
]

[tool.pylint.format]
max-line-length = 104

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=agents --cov=SHARED/league_sdk --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]
