[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "league-sdk"
version = "1.0.0"
description = "Shared SDK for Even/Odd League Multi-Agent System"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Even/Odd League Development Team", email = "dev@evenoddleague.local"}
]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
py-modules = ["league_sdk"]

[tool.setuptools.packages.find]
where = ["."]
