[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "league-sdk"
version = "1.0.0"
description = "Shared SDK for Even/Odd League Multi-Agent System"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Even/Odd League Development Team", email = "dev@evenoddleague.local"}
]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "httpx>=0.28.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["league_sdk"]
package-dir = {"league_sdk" = "."}

[tool.setuptools.package-data]
league_sdk = ["py.typed"]

[tool.black]
line-length = 104
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
^/venv/
^/.venv/
^/env/
^/dist/
^/build/
^/__pycache__/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 104
skip = ["venv", ".venv", "env", "dist", "build", "__pycache__"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = true
strict = false
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["venv", ".venv", "env", "dist", "build", "__pycache__", "setup.py"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # Missing docstring (enforced via pydocstyle)
    "R0903",  # Too few public methods (common for data classes)
    "R0913",  # Too many arguments
    "R0917",  # Too many positional arguments
    "W1514",  # Using open without explicit encoding
    "C0411",  # Wrong import order
    "W0611",  # Unused import
    "W0612",  # Unused variable
    "W0201",  # Attribute defined outside __init__
    "C0415",  # Import outside toplevel
    "W0707",  # Raise missing from
    "R1710",  # Inconsistent return statements
    "C0325",  # Unnecessary parens
    "R0801",  # Duplicate code
    "E0401",  # Import error (e.g. setuptools in venv)
    "C0103",  # Invalid-name for module
]

[tool.pylint.format]
max-line-length = 104

# Note: Test configuration is managed at project root level in /pyproject.toml
# SDK tests are located at ../../tests/unit/test_sdk/
